# Production-deployment

./: .gitignore  Makefile  README.md  pyproject.toml  readme.md  setup.cfg
.github/workflows/: install.yml  style-check.yml  testing.yml
scripts/: ingest_data.py  main.py  score.py  train.py
src/fsds/: ingestion.py  score.py  train.py  utils.py
